# CLIF-MIMIC

./: .gitignore  CHANGELOG.md  CLIFF MIMIC Table.py  CLIFF_MIMIC_Tabel.csv  ISSUESLOG.md  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt
config/: config_example.json  config_template.json
data/data_models/: language_category.1.xlsx
data/mappings/: mimic-to-clif-mappings - ecmo_mcs.csv  mimic-to-clif-mappings - ecmo_mcs_device.csv  mimic-to-clif-mappings - fluid_category.csv  mimic-to-clif-mappings - input.csv  mimic-to-clif-mappings - labs.csv  mimic-to-clif-mappings - mar_action_dedup.csv  mimic-to-clif-mappings - med_admin.csv  mimic-to-clif-mappings - med_category - CLIF 2.0.csv  mimic-to-clif-mappings - med_category.csv  mimic-to-clif-mappings - med_route_category.csv  mimic-to-clif-mappings - med_route_category_special.csv  mimic-to-clif-mappings - mode_category.csv  mimic-to-clif-mappings - output.csv
data/mcide/: clif_ecmo_mcs_configuration_category.csv  (+9 more)
dev/: README.md  code_status_dev.ipynb  code_status_dev.py  crrt_therapy_dev.py  dialysis_dev.ipynb  ecmo_dev.ipynb  ecmo_mcs_dev.py  generate_demo_data.py  generate_stress_test_data.py  hospital_diagnosis_dev.py  hospitalization_dev.ipynb  io_dev.py  labs_dev.ipynb  labs_dev.py  med_admin_dev.ipynb  micro_c_dev.py  micro_dev.ipynb  output_dev.py  pa_dev.py  pa_gcs.py  patient_dev.ipynb  patient_procedures_dev.py  profile_cohort_size.py  resp_dev.ipynb  stress_test.md  template_dev.ipynb  template_dev.py
docs/: README.md  physionet_release_notes_v120.html  physionet_rnr.md  physionet_submission.md  physionet_submission_1st.md  physionet_submission_2nd.md  physionet_submission_v120.md
notebooks/: adt_dev.ipynb  dialysis_dev.ipynb  ecmo_dev.ipynb  hosp_dx_dev.ipynb  labs_dev.ipynb  mac_dev.ipynb  med_admin_dev.ipynb  micro_culture_cleaning.Rmd  pa_dev.ipynb  patient_dev.ipynb
src/: logging_config.py  utils.py  utils_qa.py
tests/: test_labs.py  test_med_admin.py  test_organism_mapping.py
(+25 files in other folders)
