[project]
name = "clif-mimic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.5"
dependencies = [
    "duckdb>=1.3.2",
]

[dependency-groups]
dev = [
    "auto-mix-prep>=0.2.0",
    "google-api-python-client>=2.184.0",
    "marimo>=0.16.4",
    "sqlglot>=27.18.0",
    "watchdog>=6.0.0",
]
