[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clif-mimic"
version = "1.0.1"
description = "Converting the MIMIC-IV dataset into the Common Longitudinal ICU data Format (CLIF)"
readme = "README.md"
requires-python = ">=3.10.5"
dependencies = [
    "duckdb>=1.3.0",
    "fastparquet>=2024.11.0",
    "marimo>=0.18.4",
    "pandas>=2.3.3",
    "pandera>=0.26.1",
    "pyarrow>=21.0.0",
    "sf-hamilton>=1.88.0",
]

[dependency-groups]
dev = [
    "auto-mix-prep>=0.2.0",
    "clifpy>=0.3.1",
    "google-api-python-client>=2.184.0",
    "graphviz>=0.21",
    "ipykernel>=6.30.1",
    "marimo>=0.16.4",
    "matplotlib>=3.10.7",
    "pytest>=8.4.2",
    "sqlglot>=27.18.0",
    "watchdog>=6.0.0",
    "python-levenshtein>=0.27.3",
    "rapidfuzz>=3.14.3",
    "altair>=6.0.0",
    "vegafusion>=2.0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
